# kuona

./: .editorconfig  .gitignore  .gitmodules  .pairs  Brewfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  Kuona API.json  Kuona API.md  LICENSE  README.md  build  buildspec.yml  deploy-dashboard  dev-config.json  dev-setup  hosts  makefile  manifest.yaml  pre-build  set-build-version
code-collector/: README.md  project.clj
collectors/code/: README.md  project.clj
collectors/code-collector/: CHANGELOG.md  project.clj
collectors/git/: README.md  (+1 more)
dashboard/: .editorconfig  .gitignore  Gruntfile.js  README.md  dev-setup  jest.config.js  package-lock.json  package.json
deploy/: container.yml  dashboard.yml  kuona-api.retry  kuona-api.yml  kuona-properties.json.template  pingtest.yml  service-init.d.j2  systemd-service.j2  test-service-init.d.j2
deployment/: deploy.yml  init.d.j2
environment-service/: .gitignore  project.clj
git-collector/: project.clj
http-collector/: project.clj
jenkins-collector/: project.clj
kuona/: .editorconfig  env.es  project.clj  test.rest
kuona-api/: README.md  env.es  kuona-api.paw  project.clj  valuestream.es
kuona-collector-lib/: README.md  build  project.clj  unit.yml
kuona-core/: .gitignore  CHANGELOG.md  README.md  build  project.clj  unit.yml
kuona-go/: elastic.go  go.mod  handlers.go  main.go
kuona-maven-analyser/: pom.xml
kuona.io/: app.js  gruntfile.js  index.html  package.json
kuona_api/: Cargo.toml
kuona_api/src/: main.rs  search.rs
snapshot-collector/: project.clj
test-service/: project.clj
(+451 files in other folders)
